--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
   <!-- HEADER: Logo -->
   <header>
     <!-- Update the src to match your actual file path -->
-    <img src="/Users/Phil/Desktop/logo.jpg" alt="Pinnacle Freight Services Logo">
+    <img src="images/logo.jpg" alt="Pinnacle Freight Services Logo">
+">
   </header>
 
   <!-- NAVIGATION BAR -->
