--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
     /* HERO SECTION with a Truck Background */
     .hero {
-      background: url("/Users/Phil/Desktop/trucks1.jpg") no-repeat center center;
+      background: url("images/trucks1.jpg") no-repeat center center;
       background-size: cover;
       background-attachment: fixed;
       padding: 80px 20px;
